--- a/res/values-be/strings.xml
+++ b/res/values-be/strings.xml
@@ -2377,7 +2377,7 @@
     <string name="accessibility_magnification_switch_shortcut_positive_button" msgid="2446942190957296957">"Перайсці на кнопку спецыяльных магчымасцей"</string>
     <string name="accessibility_magnification_switch_shortcut_negative_button" msgid="7115794462123071594">"Скарыстаць трайное націсканне"</string>
     <string name="accessibility_magnification_triple_tap_warning_title" msgid="8484669851397296597">"У выніку можа быць запаволена праца клавіятуры"</string>
-    <string name="accessibility_magnification_triple_tap_warning_message" msgid="2008671502848936410">"Пры выкарыстанні трайнога націску для павелічэння часткі экрана могуць узнікнуць праблемы з клавіятурай.\n\nКаб іх пазбегнуць, замест трайнога націску вы можаце задаць іншую хуткую каманду для павелічэння.\n"<annotation id="link">"Змяніць наладу"</annotation></string>
+    <string name="accessibility_magnification_triple_tap_warning_message" msgid="2008671502848936410">"Пры выкарыстанні трайнога націскання для павелічэння часткі экрана могуць узнікнуць праблемы з клавіятурай.\n\nКаб іх пазбегнуць, замест трайнога націскання вы можаце задаць іншую хуткую каманду для павелічэння.\n"<annotation id="link">"Змяніць наладу"</annotation></string>
     <string name="accessibility_magnification_triple_tap_warning_positive_button" msgid="8712304035901450010">"Усё роўна працягнуць"</string>
     <string name="accessibility_magnification_triple_tap_warning_negative_button" msgid="2028849736366584733">"Скасаваць"</string>
     <string name="accessibility_magnification_service_settings_title" msgid="3531350704632316017">"Налады павелічэння"</string>
@@ -3937,7 +3937,7 @@
     <string name="zen_onboarding_current_setting_summary" msgid="8864567406905990095">"(Бягучая налада)"</string>
     <string name="zen_onboarding_dnd_visual_disturbances_header" msgid="8639698336231314609">"Змяніць налады апавяшчэнняў у рэжыме \"Не турбаваць\"?"</string>
     <string name="sound_work_settings" msgid="752627453846309092">"Гукі працоўнага профілю"</string>
-    <string name="work_use_personal_sounds_title" msgid="7729428677919173609">"Выкар. гукі асабістага профілю"</string>
+    <string name="work_use_personal_sounds_title" msgid="7729428677919173609">"Выкарыстоўваць гукі асабістага профілю"</string>
     <string name="work_use_personal_sounds_summary" msgid="608061627969077231">"Выкарыстоўваць тыя самыя гукі, што і ў асабістым профілі"</string>
     <string name="work_ringtone_title" msgid="4810802758746102589">"Рынгтон тэлефона ў працоўным профілі"</string>
     <string name="work_notification_ringtone_title" msgid="2955312017013255515">"Стандартны гук апавяшчэння ў працоўным профілі"</string>
@@ -5968,4 +5968,20 @@
     <string name="ingress_rate_limit_summary" msgid="1097811019742438371">"Наладзьце абмежаванне ўваходнай паласы прапускання для ўсіх сетак, якія забяспечваюць падключэнне да інтэрнэту."</string>
     <string name="ingress_rate_limit_dialog_title" msgid="5359461052422633789">"Наладзьце абмежаванне хуткасці спампоўвання праз сетку"</string>
     <string name="ingress_rate_limit_no_limit_entry" msgid="8741098826008012163">"Без абмежаванняў"</string>
+    <!-- no translation found for bluetooth_broadcast_dialog_title (9172775308463135884) -->
+    <skip />
+    <!-- no translation found for bluetooth_broadcast_dialog_find_message (6621660851669953883) -->
+    <skip />
+    <!-- no translation found for bluetooth_broadcast_dialog_broadcast_message (6198264676009094495) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_title (5385985218699831970) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_summary (3907899428626210673) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast (1768337775649457586) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_button_leave (7881206581147104908) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_button_scan (3995664694641895189) -->
+    <skip />
 </resources>
