--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -2327,7 +2327,7 @@
     <string name="accessibility_magnification_switch_shortcut_positive_button" msgid="2446942190957296957">"Canvia al botó d\'accessibilitat"</string>
     <string name="accessibility_magnification_switch_shortcut_negative_button" msgid="7115794462123071594">"Utilitza el triple toc"</string>
     <string name="accessibility_magnification_triple_tap_warning_title" msgid="8484669851397296597">"Això pot alentir el teclat"</string>
-    <string name="accessibility_magnification_triple_tap_warning_message" msgid="2008671502848936410">"Si fas triple toc per ampliar part de la pantalla, és possible que tinguis problemes amb el teclat.\n\nPer evitar-ho, pots canviar la drecera d\'ampliació del triple toc a una altra opció.\n"<annotation id="link">"Canvia l\'opció de configuració"</annotation>"."</string>
+    <string name="accessibility_magnification_triple_tap_warning_message" msgid="2008671502848936410">"Si fas triple toc per ampliar part de la pantalla, és possible que tinguis problemes amb el teclat.\n\nPer evitar-ho, pots canviar la drecera d\'ampliació del triple toc a una altra opció.\n"<annotation id="link">"Canvia l\'opció de configuració"</annotation></string>
     <string name="accessibility_magnification_triple_tap_warning_positive_button" msgid="8712304035901450010">"Continua igualment"</string>
     <string name="accessibility_magnification_triple_tap_warning_negative_button" msgid="2028849736366584733">"Cancel·la"</string>
     <string name="accessibility_magnification_service_settings_title" msgid="3531350704632316017">"Configuració de l\'ampliació"</string>
@@ -5175,7 +5175,7 @@
     <string name="enable_gnss_raw_meas_full_tracking_summary" msgid="3841463141138247167">"Fes un seguiment de totes les freqüències i constel·lacions de GNSS sense cicle de treball"</string>
     <string name="input_method_category" msgid="2252659253631639005">"Mètode d\'introducció de text"</string>
     <string name="stylus_handwriting" msgid="2154591374132794563">"Escriptura amb llapis òptic"</string>
-    <string name="stylus_handwriting_summary" msgid="6333425895172696950">"En activar aquesta opció, el mètode d\'introducció rep els esdeveniments de moviment del llapis òptic si se selecciona un editor."</string>
+    <string name="stylus_handwriting_summary" msgid="6333425895172696950">"En activar aquesta opció, el mètode d\'introducció rep els esdeveniments de moviment del llapis òptic si se selecciona un editor"</string>
     <string name="device_theme" msgid="5027604586494772471">"Tema del dispositiu"</string>
     <string name="default_theme" msgid="4815428567082263639">"Predeterminat"</string>
     <string name="show_operator_name_title" msgid="3355910331531144028">"Nom de la xarxa"</string>
@@ -5785,7 +5785,23 @@
     <string name="bluetooth_details_head_tracking_title" msgid="5416972521040337799">"Seguiment del cap"</string>
     <string name="bluetooth_details_head_tracking_summary" msgid="3942238746595985395">"L\'àudio canvia a mesura que mous el cap per sonar més natural"</string>
     <string name="ingress_rate_limit_title" msgid="2106694002836274350">"Límit de velocitat de baixada de la xarxa"</string>
-    <string name="ingress_rate_limit_summary" msgid="1097811019742438371">"Configura el límit de velocitat d\'entrada de l\'amplada de banda de la xarxa que s\'aplica a totes les xarxes que proporcionen connexió a Internet."</string>
+    <string name="ingress_rate_limit_summary" msgid="1097811019742438371">"Configura el límit de velocitat d\'entrada de l\'amplada de banda de la xarxa que s\'aplica a totes les xarxes que proporcionen connexió a Internet"</string>
     <string name="ingress_rate_limit_dialog_title" msgid="5359461052422633789">"Configura el límit de velocitat de baixada de la xarxa"</string>
     <string name="ingress_rate_limit_no_limit_entry" msgid="8741098826008012163">"Sense límit"</string>
+    <!-- no translation found for bluetooth_broadcast_dialog_title (9172775308463135884) -->
+    <skip />
+    <!-- no translation found for bluetooth_broadcast_dialog_find_message (6621660851669953883) -->
+    <skip />
+    <!-- no translation found for bluetooth_broadcast_dialog_broadcast_message (6198264676009094495) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_title (5385985218699831970) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_summary (3907899428626210673) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast (1768337775649457586) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_button_leave (7881206581147104908) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_button_scan (3995664694641895189) -->
+    <skip />
 </resources>
