--- a/res/values-lv/strings.xml
+++ b/res/values-lv/strings.xml
@@ -2413,7 +2413,7 @@
     <string name="accessibility_shortcut_edit_dialog_title_advance" msgid="4567868630655591506">"Papildu"</string>
     <string name="accessibility_screen_magnification_navbar_configuration_warning" msgid="266736851606791552">"Pieejamības pogai ir iestatīts pakalpojums <xliff:g id="SERVICE">%1$s</xliff:g>. Lai izmantotu palielināšanu, pieskarieties pieejamības pogai un pēc tam atlasiet palielināšanu."</string>
     <string name="accessibility_screen_magnification_gesture_navigation_warning" msgid="991017769735632046">"Pieejamības žestam ir iestatīts <xliff:g id="SERVICE">%1$s</xliff:g>. Lai izmantotu palielinājumu, velciet ar diviem pirkstiem no ekrāna apakšdaļas un turiet. Pēc tam atlasiet palielinājumu."</string>
-    <string name="accessibility_global_gesture_preference_title" msgid="3713636732641882959">"Skaļuma pogu īsinājumtaustiņš"</string>
+    <string name="accessibility_global_gesture_preference_title" msgid="3713636732641882959">"Skaļuma pogu saīsne"</string>
     <string name="accessibility_shortcut_service_title" msgid="6842883700702723355">"Īsinājumtaustiņa pakalpojums"</string>
     <string name="accessibility_shortcut_settings" msgid="836783442658447995">"Saīšņu iestatījumi"</string>
     <string name="accessibility_shortcut_service_on_lock_screen_title" msgid="3923122834058574478">"Saīsne no bloķēšanas ekrāna"</string>
@@ -5877,4 +5877,12 @@
     <string name="ingress_rate_limit_summary" msgid="1097811019742438371">"Varat konfigurēt tīkla joslas platuma ātruma ierobežojumu ienākošajiem datiem. Tas tiks piemērots visiem tīkliem, kas nodrošina interneta savienojumu."</string>
     <string name="ingress_rate_limit_dialog_title" msgid="5359461052422633789">"Tīkla lejupielādes ātruma ierobežojuma konfigurēšana"</string>
     <string name="ingress_rate_limit_no_limit_entry" msgid="8741098826008012163">"Nav ierobežojuma"</string>
+    <string name="bluetooth_broadcast_dialog_title" msgid="9172775308463135884">"Apraide"</string>
+    <string name="bluetooth_broadcast_dialog_find_message" msgid="6621660851669953883">"Klausieties tuvumā atskaņotas apraides."</string>
+    <string name="bluetooth_broadcast_dialog_broadcast_message" msgid="6198264676009094495">"Apraidiet multividi uz tuvumā esošām ierīcēm vai klausieties citu atpraides."</string>
+    <string name="bluetooth_find_broadcast_title" msgid="5385985218699831970">"Apraides"</string>
+    <string name="bluetooth_find_broadcast_summary" msgid="3907899428626210673">"Klausīšanās"</string>
+    <string name="bluetooth_find_broadcast" msgid="1768337775649457586">"Meklēt apraides"</string>
+    <string name="bluetooth_find_broadcast_button_leave" msgid="7881206581147104908">"Pamest apraidi"</string>
+    <string name="bluetooth_find_broadcast_button_scan" msgid="3995664694641895189">"Skenēt QR kodu"</string>
 </resources>
