--- a/res/values-mr/strings.xml
+++ b/res/values-mr/strings.xml
@@ -1548,7 +1548,7 @@
     <string name="status_operator" msgid="4335640583552058491">"नेटवर्क"</string>
     <string name="status_wifi_mac_address" msgid="4447611754614388914">"वाय-फाय MAC अ‍ॅड्रेस"</string>
     <string name="status_device_wifi_mac_address" msgid="1896121694334176494">"डिव्हाइसचा वाय-फाय MAC ॲड्रेस"</string>
-    <string name="status_bt_address" msgid="6919660304578476547">"ब्लूटूथ पत्ता"</string>
+    <string name="status_bt_address" msgid="6919660304578476547">"ब्लूटूथ ॲड्रेस"</string>
     <string name="status_serial_number" msgid="9060064164331466789">"सिरीअल नंबर"</string>
     <string name="status_up_time" msgid="1274778533719495438">"सुरू असल्याचा कालावधी"</string>
     <string name="status_awake_time" msgid="2573925324168081586">"सक्रिय वेळ"</string>
@@ -1912,7 +1912,7 @@
     <string name="safety_and_regulatory_info" msgid="8285048080439298528">"सुरक्षितता आणि नियमन विषयक पुस्तिका"</string>
     <string name="copyright_title" msgid="83245306827757857">"कॉपीराइट"</string>
     <string name="license_title" msgid="8745742085916617540">"परवाना"</string>
-    <string name="module_license_title" msgid="8705484239826702828">"Google Play सिस्टम अपडेट परवाने"</string>
+    <string name="module_license_title" msgid="8705484239826702828">"Google Play सिस्टीम अपडेट परवाने"</string>
     <string name="terms_title" msgid="2071742973672326073">"अटी आणि नियम"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"सिस्टम WebView परवाना"</string>
     <string name="wallpaper_attributions" msgid="4323659759250650736">"वॉलपेपर श्रेय"</string>
@@ -4293,7 +4293,7 @@
     <string name="warning_button_text" msgid="1274234338874005639">"चेतावणी"</string>
     <string name="suggestion_button_text" msgid="4370673818678692873">"ठीक"</string>
     <string name="suggestion_button_close" msgid="6865170855573283759">"बंद करा"</string>
-    <string name="device_feedback" msgid="5351614458411688608">"या डिव्हाइस बद्दल अभिप्राय पाठवा"</string>
+    <string name="device_feedback" msgid="5351614458411688608">"या डिव्हाइसबद्दल अभिप्राय पाठवा"</string>
     <string name="restr_pin_enter_admin_pin" msgid="4435410646541671918">"प्रशासक पिन एंटर करा"</string>
     <string name="switch_on_text" msgid="5664542327776075105">"सुरू"</string>
     <string name="switch_off_text" msgid="1315547447393646667">"बंद"</string>
@@ -4923,7 +4923,7 @@
     <string name="double_twist_for_camera_mode_title" msgid="472455236910935684">"सेल्फीसाठी कॅमेरा फ्लिप करा"</string>
     <string name="double_twist_for_camera_mode_summary" msgid="592503740044744951"></string>
     <string name="double_twist_for_camera_suggestion_title" msgid="8178844037382604158">"अधिक जलद सेल्फी घ्या"</string>
-    <string name="system_navigation_title" msgid="1698862900901417194">"सिस्टम नेव्हिगेशन"</string>
+    <string name="system_navigation_title" msgid="1698862900901417194">"सिस्टीम नेव्हिगेशन"</string>
     <string name="swipe_up_to_switch_apps_title" msgid="6677266952021118342">"दोन बटण नेव्हिगेशन"</string>
     <string name="swipe_up_to_switch_apps_summary" msgid="1415457307836359560">"अ‍ॅप्स स्विच करण्यासाठी, होम बटणावर वर स्वाइप करा. सर्व अ‍ॅप्स पाहण्यासाठी, पुन्हा वर स्वाइप करा. मागे जाण्यासाठी, मागे जा बटणावर टॅप करा."</string>
     <string name="swipe_up_to_switch_apps_suggestion_title" msgid="5754081720589900007">"नवीन होम बटण वापरून पहा"</string>
@@ -5777,4 +5777,20 @@
     <string name="ingress_rate_limit_summary" msgid="1097811019742438371">"इंटरनेट कनेक्टिव्हिटी पुरवणाऱ्या सर्व नेटवर्कना लागू होणारी नेटवर्क बँडविड्थ प्रवेश रेट मर्यादा कॉंफिगर करा."</string>
     <string name="ingress_rate_limit_dialog_title" msgid="5359461052422633789">"नेटवर्कच्या डाउनलोड रेटची मर्यादा कॉंफिगर करा"</string>
     <string name="ingress_rate_limit_no_limit_entry" msgid="8741098826008012163">"कोणतीही मर्यादा नाही"</string>
+    <!-- no translation found for bluetooth_broadcast_dialog_title (9172775308463135884) -->
+    <skip />
+    <!-- no translation found for bluetooth_broadcast_dialog_find_message (6621660851669953883) -->
+    <skip />
+    <!-- no translation found for bluetooth_broadcast_dialog_broadcast_message (6198264676009094495) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_title (5385985218699831970) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_summary (3907899428626210673) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast (1768337775649457586) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_button_leave (7881206581147104908) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_button_scan (3995664694641895189) -->
+    <skip />
 </resources>
