--- a/res/values-si/strings.xml
+++ b/res/values-si/strings.xml
@@ -2344,8 +2344,8 @@
     <string name="accessibility_text_reading_confirm_dialog_title" msgid="2865331351355690389">"සංදර්ශක තරම සහ පෙළ යළි සකසන්නද?"</string>
     <string name="accessibility_text_reading_confirm_dialog_message" msgid="517090197003540264">"ඔබගේ සංදර්ශක තරම සහ පෙළ මනාප දුරකථනයේ මුල් සැකසීම් වෙත යළි සකසනු ඇත"</string>
     <string name="accessibility_text_reading_confirm_dialog_reset_button" msgid="8215800137850243736">"යළි සකසන්න"</string>
-    <string name="accessibility_text_reading_conversation_message_1" msgid="7883952203831957831">"සති අන්ත සැලසුම් තිබේද?"</string>
-    <string name="accessibility_text_reading_conversation_message_2" msgid="8112160435318635856">"මුහුදු වෙරළට යනවා. එක් වීමට අවශ්‍යද?"</string>
+    <string name="accessibility_text_reading_conversation_message_1" msgid="7883952203831957831">"සති අන්තයේ මොකද කරන්නේ?"</string>
+    <string name="accessibility_text_reading_conversation_message_2" msgid="8112160435318635856">"මුහුදු වෙරළට යනවා. එක් වීමට කැමති ද?"</string>
     <string name="accessibility_screen_option" msgid="8465307075278878145">"විකල්ප"</string>
     <string name="accessibility_preference_magnification_summary" msgid="2875518904115896888">"තිරය මත විශාලනය කරන්න"</string>
     <string name="accessibility_screen_magnification_short_summary" msgid="2207048420669939150">"විශාලනය කිරීමට 3 වරක් තට්ටු කරන්න"</string>
@@ -5788,4 +5788,20 @@
     <string name="ingress_rate_limit_summary" msgid="1097811019742438371">"අන්තර්ජාල සබැඳුම සපයන සියලු ජාල සඳහා යෙදෙන ජාල කලාප පළල ඇතුළු වීමේ අනුපාත සීමාව වින්‍යාස කරන්න."</string>
     <string name="ingress_rate_limit_dialog_title" msgid="5359461052422633789">"ජාල බාගැනීම් අනුපාත සීමාව වින්‍යාස කරන්න"</string>
     <string name="ingress_rate_limit_no_limit_entry" msgid="8741098826008012163">"සීමාවක් නැත"</string>
+    <!-- no translation found for bluetooth_broadcast_dialog_title (9172775308463135884) -->
+    <skip />
+    <!-- no translation found for bluetooth_broadcast_dialog_find_message (6621660851669953883) -->
+    <skip />
+    <!-- no translation found for bluetooth_broadcast_dialog_broadcast_message (6198264676009094495) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_title (5385985218699831970) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_summary (3907899428626210673) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast (1768337775649457586) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_button_leave (7881206581147104908) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_button_scan (3995664694641895189) -->
+    <skip />
 </resources>
