--- a/res/values-sw/strings.xml
+++ b/res/values-sw/strings.xml
@@ -2327,7 +2327,7 @@
     <string name="accessibility_magnification_switch_shortcut_positive_button" msgid="2446942190957296957">"Badilisha utumie kitufe cha zana za ufikivu"</string>
     <string name="accessibility_magnification_switch_shortcut_negative_button" msgid="7115794462123071594">"Tumia kipengele cha kugusa mara tatu"</string>
     <string name="accessibility_magnification_triple_tap_warning_title" msgid="8484669851397296597">"Huenda hali hii ikapunguza kasi ya kibodi yako"</string>
-    <string name="accessibility_magnification_triple_tap_warning_message" msgid="2008671502848936410">"Unapotumia kipengele cha kugusa mara tatu ili kukuza sehemu ya skrini yako, unaweza kutambua hitilafu kwenye kibodi.\n\nIli uepuke hali hii, unaweza kubadilisha njia yako ya mkato ya ukuzaji kutoka kugusa mara tatu na ktumia chaguo lingine.\n"<annotation id="link">"Badilisha mipangilio"</annotation></string>
+    <string name="accessibility_magnification_triple_tap_warning_message" msgid="2008671502848936410">"Unapotumia kipengele cha kugusa mara tatu ili kukuza sehemu ya skrini yako, huenda ukatambua hitilafu kwenye kibodi.\n\nIli uepuke hali hii, unaweza kubadilisha njia yako ya mkato ya ukuzaji kutoka kugusa mara tatu na utumie chaguo lingine.\n"<annotation id="link">"Badilisha mipangilio"</annotation></string>
     <string name="accessibility_magnification_triple_tap_warning_positive_button" msgid="8712304035901450010">"Endelea licha ya hayo"</string>
     <string name="accessibility_magnification_triple_tap_warning_negative_button" msgid="2028849736366584733">"Ghairi"</string>
     <string name="accessibility_magnification_service_settings_title" msgid="3531350704632316017">"Mipangilio ya ukuzaji"</string>
@@ -2345,7 +2345,7 @@
     <string name="accessibility_text_reading_confirm_dialog_message" msgid="517090197003540264">"Mapendeleo ya maandishi na ukubwa wa skrini yako yatarejeshwa kwenye mipangilio halisi ya simu"</string>
     <string name="accessibility_text_reading_confirm_dialog_reset_button" msgid="8215800137850243736">"Badilisha"</string>
     <string name="accessibility_text_reading_conversation_message_1" msgid="7883952203831957831">"Una mipango yoyote ya wikendi?"</string>
-    <string name="accessibility_text_reading_conversation_message_2" msgid="8112160435318635856">"Ninaelekea ufukweni. Ungependa kuungana na mimi?"</string>
+    <string name="accessibility_text_reading_conversation_message_2" msgid="8112160435318635856">"Ninaelekea ufukweni. Ungependa kuja?"</string>
     <string name="accessibility_screen_option" msgid="8465307075278878145">"Chaguo"</string>
     <string name="accessibility_preference_magnification_summary" msgid="2875518904115896888">"Vuta karibu kwenye skrini"</string>
     <string name="accessibility_screen_magnification_short_summary" msgid="2207048420669939150">"Gusa mara 3 ili ukuze"</string>
@@ -5789,4 +5789,20 @@
     <string name="ingress_rate_limit_summary" msgid="1097811019742438371">"Weka mipangilio ya kiwango cha kikomo cha uingiaji kipimo data cha mtandao ambacho kinatumika katika mitandao yote inayotoa muunganisho wa intaneti."</string>
     <string name="ingress_rate_limit_dialog_title" msgid="5359461052422633789">"Weka mipangilio ya kiwango cha kikomo cha upakuaji wa mtandao"</string>
     <string name="ingress_rate_limit_no_limit_entry" msgid="8741098826008012163">"Hakuna kikomo"</string>
+    <!-- no translation found for bluetooth_broadcast_dialog_title (9172775308463135884) -->
+    <skip />
+    <!-- no translation found for bluetooth_broadcast_dialog_find_message (6621660851669953883) -->
+    <skip />
+    <!-- no translation found for bluetooth_broadcast_dialog_broadcast_message (6198264676009094495) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_title (5385985218699831970) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_summary (3907899428626210673) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast (1768337775649457586) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_button_leave (7881206581147104908) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_button_scan (3995664694641895189) -->
+    <skip />
 </resources>
