--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -2351,7 +2351,7 @@
     <string name="accessibility_screen_magnification_short_summary" msgid="2207048420669939150">"Yakınlaştırmak için 3 defa dokunun"</string>
     <string name="accessibility_screen_magnification_navbar_short_summary" msgid="4885018322430052037">"Yakınlaştırmak için bir düğmeye dokunun"</string>
     <string name="accessibility_screen_magnification_intro_text" msgid="3856180549393526339">"İçerikleri büyütmek için ekranı hızlıca yakınlaştırın"</string>
-    <string name="accessibility_screen_magnification_summary" msgid="8267672508057326959">"&lt;b&gt;Yakınlaştırmak için:&lt;/b&gt;&lt;br/&gt; {0,number,integer}. Büyütmeyi başlatmak için kısayol kullanın&lt;br/&gt; {1,number,integer}. Ekrana dokunun&lt;br/&gt; {2,number,integer}. Ekranda gezinmek için 2 parmağınızı sürükleyin&lt;br/&gt; {3,number,integer}. Yakınlaştırmayı ayarlamak için 2 parmağınızla sıkıştırın&lt;br/&gt; {4,number,integer}. Büyütmeyi durdurmak için kısayol kullanın&lt;br/&gt;&lt;br/&gt; &lt;b&gt;Geçici bir süreliğine yakınlaştırmak için:&lt;/b&gt;&lt;br/&gt; {0,number,integer}. Büyütme türünün tam ekran olarak ayarlandığından emin olun&lt;br/&gt; {1,number,integer}. Büyütmeyi başlatmak için kısayol kullanın&lt;br/&gt; {2,number,integer}. Ekranda herhangi bir yere dokunup basılı tutun&lt;br/&gt; {3,number,integer}. Ekranda gezinmek için parmağınızı sürükleyin&lt;br/&gt; {4,number,integer}. Büyütmeyi durdurmak için parmağınızı kaldırın"</string>
+    <string name="accessibility_screen_magnification_summary" msgid="8267672508057326959">"&lt;b&gt;Yakınlaştırmak için:&lt;/b&gt;&lt;br/&gt; {0,number,integer}. Büyütmeyi başlatmak için kısayolu kullanın&lt;br/&gt; {1,number,integer}. Ekrana dokunun&lt;br/&gt; {2,number,integer}. Ekranda gezinmek için 2 parmağınızı sürükleyin&lt;br/&gt; {3,number,integer}. Yakınlaştırmayı ayarlamak için 2 parmağınızla sıkıştırın&lt;br/&gt; {4,number,integer}. Büyütmeyi durdurmak için kısayolu kullanın&lt;br/&gt;&lt;br/&gt; &lt;b&gt;Geçici bir süreliğine yakınlaştırmak için:&lt;/b&gt;&lt;br/&gt; {0,number,integer}. Büyütme türünün tam ekran olarak ayarlandığından emin olun&lt;br/&gt; {1,number,integer}. Büyütmeyi başlatmak için kısayolu kullanın&lt;br/&gt; {2,number,integer}. Ekranda herhangi bir yere dokunup basılı tutun&lt;br/&gt; {3,number,integer}. Ekranda gezinmek için parmağınızı sürükleyin&lt;br/&gt; {4,number,integer}. Büyütmeyi durdurmak için parmağınızı kaldırın"</string>
     <string name="accessibility_screen_magnification_navbar_summary" msgid="807985499898802296">"Büyütme açıldığında ekranınızda yakınlaştırma yapabilirsiniz.\n\n"<b>"Yakınlaştırmak için"</b>", büyütmeyi başlatın, ardından ekranda herhangi bir yere dokunun.\n"<ul><li>"Kaydırmak için 2 veya daha fazla parmağınızı sürükleyin"</li>\n<li>"Yakınlaştırmayı ayarlamak için 2 veya daha fazla parmağınızı birbirine yaklaştırın"</li></ul>\n\n<b>"Geçici olarak yakınlaştırmak için"</b>", büyütmeyi başlatın, ardından ekranda herhangi bir yere dokunup basılı tutun.\n"<ul><li>"Ekranda hareket etmek için sürükleyin"</li>\n<li>"Uzaklaştırmak için parmağınızı çekin"</li></ul>\n\n"Klavyede veya gezinme çubuğundayken yakınlaştırma yapamazsınız."</string>
     <string name="accessibility_tutorial_pager" msgid="8461939455728454061">"Sayfa <xliff:g id="CURRENT_PAGE">%1$d</xliff:g>/<xliff:g id="NUM_PAGES">%2$d</xliff:g>"</string>
     <string name="accessibility_tutorial_dialog_title_button" msgid="4681164949716215131">"Açmak için erişilebilirlik düğmesini kullanın"</string>
@@ -3744,7 +3744,7 @@
     <string name="live_caption_summary" msgid="2898451867595161809">"Otomatik medya altyazısı"</string>
     <string name="spatial_audio_speaker" msgid="9145233652433523302">"Telefon hoparlörü"</string>
     <string name="spatial_audio_wired_headphones" msgid="2237355789145828648">"Kablolu kulaklık"</string>
-    <string name="spatial_audio_text" msgid="3273982964342449273">"Üç boyutlu ses özelliği, sesi her yerden geliyormuş gibi duymanızı sağlayan etkileyici bir deneyim sunar Bu özellik yalnızca bazı medyalarla çalışır."</string>
+    <string name="spatial_audio_text" msgid="3273982964342449273">"Üç boyutlu ses özelliği, sesi her yerden geliyormuş gibi duymanızı sağlayan etkileyici bir deneyim sunar. Bu özellik yalnızca bazı medyalarla çalışır."</string>
     <string name="spatial_summary_off" msgid="8272678804629774378">"Kapalı"</string>
     <string name="spatial_summary_on_one" msgid="6239933399496282994">"Açık/<xliff:g id="OUTPUT_DEVICE">%1$s</xliff:g>"</string>
     <string name="spatial_summary_on_two" msgid="4526919818832483883">"Açık/<xliff:g id="OUTPUT_DEVICE_0">%1$s</xliff:g> ve <xliff:g id="OUTPUT_DEVICE_1">%2$s</xliff:g>"</string>
@@ -3985,7 +3985,7 @@
     <string name="important_bubble" msgid="7911698275408390846">"Öncelikli görüşmeleri balon olarak göster"</string>
     <string name="important_conversation_behavior_summary" msgid="1845064084071107732">"Öncelikli görüşmeler aşağı indirilen gölgenin üst kısmında gösterilir. Bunları ayrıca baloncuk olarak gösterilecek ve Rahatsız Etmeyin özelliğini dikkate almayacak şekilde ayarlayabilirsiniz."</string>
     <string name="conversation_onboarding_title" msgid="5194559958353468484">"Öncelikli ve değiştirilmiş görüşmeler burada görünür"</string>
-    <string name="conversation_onboarding_summary" msgid="2484845363368486941">"Bir görüşmeyi öncelikli olarak işaretlediğinizde veya görüşmelerde başka değişiklikler yaptığınızda burada görünür. \n\nGörüşme ayarlarını değiştirmek için:\nAşağı indirilen gölgeyi açmak için ekranın üst kısmından aşağı kaydırın, ardından bir görüşmeye dokunup basılı tutun."</string>
+    <string name="conversation_onboarding_summary" msgid="2484845363368486941">"Öncelikli olarak işaretlediğiniz veya üzerinde başka değişiklikler yaptığınız görüşmeler burada görünür. \n\nGörüşme ayarlarını değiştirmek için:\nAşağı indirilen gölgeyi açmak için ekranın üst kısmından aşağı kaydırın, ardından bir görüşmeye dokunup basılı tutun."</string>
     <string name="notification_importance_min" msgid="4609688642942787774">"Sessiz olarak göster ve küçült"</string>
     <string name="notification_importance_low" msgid="7562535765919565273">"Sessiz bir şekilde göster"</string>
     <string name="notification_importance_default" msgid="7483906490369073043">"Ses çıkar"</string>
@@ -4931,7 +4931,7 @@
     <string name="double_tap_power_for_camera_title" msgid="7982364144330923683">"Kamerayı hızlı aç"</string>
     <string name="double_tap_power_for_camera_summary" msgid="1100926048598415509">"Kamerayı çabuk açmak için güç düğmesine iki kez dokunun. Tüm ekranlarda çalışır."</string>
     <string name="double_tap_power_for_camera_suggestion_title" msgid="4299496243418753571">"Kamerayı hızlı açın"</string>
-    <string name="double_twist_for_camera_mode_title" msgid="472455236910935684">"Selfie için kamerayı çevir"</string>
+    <string name="double_twist_for_camera_mode_title" msgid="472455236910935684">"Selfie için kamerayı değiştir"</string>
     <string name="double_twist_for_camera_mode_summary" msgid="592503740044744951"></string>
     <string name="double_twist_for_camera_suggestion_title" msgid="8178844037382604158">"Selfie\'leri daha hızlı çekin"</string>
     <string name="system_navigation_title" msgid="1698862900901417194">"Sistemde gezinme"</string>
@@ -5137,7 +5137,7 @@
     <string name="storage_apps" msgid="3564291603258795216">"Uygulamalar"</string>
     <string name="storage_documents_and_other" msgid="3293689243732236480">"Dokümanlar ve diğerleri"</string>
     <string name="storage_system" msgid="8472410119822911844">"Sistem"</string>
-    <string name="storage_trash" msgid="2807138998886084856">"Çöp kutusu"</string>
+    <string name="storage_trash" msgid="2807138998886084856">"Çöp Kutusu"</string>
     <string name="storage_trash_dialog_title" msgid="2296169576049935200">"Çöp kutusu boşaltılsın mı?"</string>
     <string name="storage_trash_dialog_ask_message" msgid="8982602137242358798">"Çöp kutusunda <xliff:g id="TOTAL">%1$s</xliff:g> dosya var. Tüm öğeler kalıcı olarak silinecek ve geri yüklenemeyecek."</string>
     <string name="storage_trash_dialog_empty_message" msgid="7334670765528691400">"Çöp kutusu boş"</string>
@@ -5587,7 +5587,7 @@
     <string name="accessor_never_expires_text" msgid="4647624492147788340">"Kiralamanın sona erme tarihi yok."</string>
     <string name="overlay_settings_title" msgid="1032863083496396365">"Ayarların üzerinde ekran yer paylaşımına izin ver"</string>
     <string name="overlay_settings_summary" msgid="2745336273786148166">"Diğer uygulamaların üzerinde görüntülenebilecek uygulamaların Ayarlar ekranlarıyla yer paylaşımlı olarak gösterilmesine izin verir"</string>
-    <string name="allow_mock_modem" msgid="3832264806530479214">"Sahte Modem\'e izin verme"</string>
+    <string name="allow_mock_modem" msgid="3832264806530479214">"Sahte Modem\'e izin ver"</string>
     <string name="allow_mock_modem_summary" msgid="9097416612748005374">"Bu cihazın, enstrümantasyon testi için Sahte Modem hizmetini çalıştırmasına izin verin. Bu hizmeti, telefonunuzu normal kullanırken etkinleştirmeyin"</string>
     <string name="media_controls_title" msgid="403271085636252597">"Medya"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"Medya oynatıcıyı sabitle"</string>
@@ -5640,7 +5640,7 @@
     <string name="default_active_sim_calls" msgid="2390973682556353558">"aramalar"</string>
     <string name="default_active_sim_sms" msgid="8041498593025994921">"SMS"</string>
     <string name="default_active_sim_mobile_data" msgid="6798083892814045301">"mobil veri"</string>
-    <string name="wifi_scan_notify_message" msgid="4130641837826688879">"Uygulamalar ve hizmetler, cihaz deneyimini iyileştirmek için Kablosuz özelliği kapalı bile olsa kablosuz ağlar herhangi bir zamanda tarayabilir. Bu özellik örneğin konuma dayalı özellikleri ve hizmetleri iyileştirmek için kullanılabilir. Bunu kablosuz ağ taraması ayarlarından değiştirebilirsiniz. "<annotation id="link">"Değiştir"</annotation></string>
+    <string name="wifi_scan_notify_message" msgid="4130641837826688879">"Uygulamalar ve hizmetler, cihaz deneyimini iyileştirmek için Kablosuz özelliği kapalı bile olsa kablosuz ağları herhangi bir zamanda tarayabilir. Bu özellik örneğin konuma dayalı özellikleri ve hizmetleri iyileştirmek için kullanılabilir. Bunu kablosuz ağ taraması ayarlarından değiştirebilirsiniz. "<annotation id="link">"Değiştir"</annotation></string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Bağlı"</string>
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Bağlantı yok"</string>
@@ -5784,8 +5784,24 @@
     <string name="bluetooth_details_spatial_audio_summary" msgid="5026859623681482668">"Uyumlu medyadaki sesler daha yoğun gelir"</string>
     <string name="bluetooth_details_head_tracking_title" msgid="5416972521040337799">"Kafa hareketi izleme"</string>
     <string name="bluetooth_details_head_tracking_summary" msgid="3942238746595985395">"Ses, kulağa daha doğal gelmesi için kafanızı hareket ettirdikçe değişir"</string>
-    <string name="ingress_rate_limit_title" msgid="2106694002836274350">"Ağ indirme sıklık sınırı"</string>
-    <string name="ingress_rate_limit_summary" msgid="1097811019742438371">"İnternet bağlantısı sağlayan tüm ağlarda geçerli ağ bant genişliği giriş sıklık sınırını yapılandırın."</string>
-    <string name="ingress_rate_limit_dialog_title" msgid="5359461052422633789">"Ağ indirme sıklık sınırını yapılandırın"</string>
+    <string name="ingress_rate_limit_title" msgid="2106694002836274350">"Ağ indirme hızı sınırı"</string>
+    <string name="ingress_rate_limit_summary" msgid="1097811019742438371">"İnternet bağlantısı sağlayan tüm ağlarda geçerli ağ bant genişliği indirme hızı sınırını yapılandırın."</string>
+    <string name="ingress_rate_limit_dialog_title" msgid="5359461052422633789">"Ağ indirme hızı sınırını yapılandır"</string>
     <string name="ingress_rate_limit_no_limit_entry" msgid="8741098826008012163">"Sınır yok"</string>
+    <!-- no translation found for bluetooth_broadcast_dialog_title (9172775308463135884) -->
+    <skip />
+    <!-- no translation found for bluetooth_broadcast_dialog_find_message (6621660851669953883) -->
+    <skip />
+    <!-- no translation found for bluetooth_broadcast_dialog_broadcast_message (6198264676009094495) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_title (5385985218699831970) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_summary (3907899428626210673) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast (1768337775649457586) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_button_leave (7881206581147104908) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_button_scan (3995664694641895189) -->
+    <skip />
 </resources>
