--- a/res/values-ur/strings.xml
+++ b/res/values-ur/strings.xml
@@ -2309,7 +2309,7 @@
     <string name="accessibility_screen_magnification_title" msgid="1211169976144629087">"میگنیفکیشن"</string>
     <string name="accessibility_screen_magnification_shortcut_title" msgid="2387963646377987780">"میگنیفکیشن شارٹ کٹ"</string>
     <string name="accessibility_screen_magnification_follow_typing_title" msgid="6379517513916651560">"ٹائپنگ کو بڑا کریں"</string>
-    <string name="accessibility_screen_magnification_follow_typing_summary" msgid="2882250257391761678">"میگنیفائر آپ کے ٹائپ کرتے ہی ٹیکسٹ کی پیروی کرتا ہے"</string>
+    <string name="accessibility_screen_magnification_follow_typing_summary" msgid="2882250257391761678">"میگنیفائر آپ کے ٹائپ کرتے وقت ٹیکسٹ کی پیروی کرتا ہے"</string>
     <string name="accessibility_screen_magnification_about_title" msgid="8857919020223505415">"میگنیفکیشن کے بارے میں"</string>
     <string name="accessibility_screen_magnification_footer_learn_more_content_description" msgid="924848332575978463">"میگنیفکیشن کے بارے میں مزید جانیں"</string>
     <string name="accessibility_magnification_mode_title" msgid="8446475127807168063">"میگنیفکیشن کی قسم"</string>
@@ -2327,7 +2327,7 @@
     <string name="accessibility_magnification_switch_shortcut_positive_button" msgid="2446942190957296957">"ایکسیسبیلٹی بٹن پر سوئچ کریں"</string>
     <string name="accessibility_magnification_switch_shortcut_negative_button" msgid="7115794462123071594">"تین بار تھپتھپائیں کا استعمال کریں"</string>
     <string name="accessibility_magnification_triple_tap_warning_title" msgid="8484669851397296597">"اس سے آپ کا کی بورڈ سست ہو سکتا ہے"</string>
-    <string name="accessibility_magnification_triple_tap_warning_message" msgid="2008671502848936410">"اپنی اسکرین کے حصے کو بڑا کرنے کے لیے تین بار تھپتھپاہٹ کا استعمال کرتے وقت، آپ کی بورڈ پر مسائل نوٹس کر سکتے ہیں۔\n\nاس سے بچنے کے لیے، اپنے میگنیفکیشن شارٹ کٹ کو تین بار تھپتھپاہٹ سے دوسرے اختیار میں تبدیل کر سکتے ہیں۔\n"<annotation id="link">"ترتیب تبدیل کریں"</annotation></string>
+    <string name="accessibility_magnification_triple_tap_warning_message" msgid="2008671502848936410">"اپنی اسکرین کے کسی حصے کو بڑا کرنے کیلئے تین بار تھپتھپاہٹ کا استعمال کرتے وقت آپ کو کی بورڈ پر مسائل کا سامنا ہو سکتا ہے۔\n\nاس سے بچنے کے لیے، آپ اپنے میگنیفکیشن شارٹ کٹ کو تین بار تھپتھپاہٹ سے کسی دوسرے اختیار میں تبدیل کر سکتے ہیں۔\n"<annotation id="link">"ترتیب تبدیل کریں"</annotation></string>
     <string name="accessibility_magnification_triple_tap_warning_positive_button" msgid="8712304035901450010">"بہر حال جاری رکھیں"</string>
     <string name="accessibility_magnification_triple_tap_warning_negative_button" msgid="2028849736366584733">"منسوخ کریں"</string>
     <string name="accessibility_magnification_service_settings_title" msgid="3531350704632316017">"میگنیفکیشن کی ترتیبات"</string>
@@ -2344,8 +2344,8 @@
     <string name="accessibility_text_reading_confirm_dialog_title" msgid="2865331351355690389">"ڈسپلے کا سائز اور ٹیکسٹ کو ری سیٹ کریں؟"</string>
     <string name="accessibility_text_reading_confirm_dialog_message" msgid="517090197003540264">"آپ کے ڈسپلے کا سائز اور ٹیکسٹ کی ترجیحات فون کی اصل ترتیبات پر ری سیٹ ہو جائیں گی"</string>
     <string name="accessibility_text_reading_confirm_dialog_reset_button" msgid="8215800137850243736">"ری سیٹ کریں"</string>
-    <string name="accessibility_text_reading_conversation_message_1" msgid="7883952203831957831">"کوئی ویک اینڈ پلان؟"</string>
-    <string name="accessibility_text_reading_conversation_message_2" msgid="8112160435318635856">"ساحل کی طرف روانہ۔ شامل ہونا چاہتے ہیں؟"</string>
+    <string name="accessibility_text_reading_conversation_message_1" msgid="7883952203831957831">"ویک اینڈ پر کوئی پلان ہے؟"</string>
+    <string name="accessibility_text_reading_conversation_message_2" msgid="8112160435318635856">"ساحل کی طرف جانے کا پلان ہے۔ آپ بھی شامل ہونا چاہتے ہیں؟"</string>
     <string name="accessibility_screen_option" msgid="8465307075278878145">"اختیارات"</string>
     <string name="accessibility_preference_magnification_summary" msgid="2875518904115896888">"اسکرین پر زوم ان کریں"</string>
     <string name="accessibility_screen_magnification_short_summary" msgid="2207048420669939150">"زوم کرنے کیلئے 3 بار تھپتھپائیں"</string>
@@ -2435,7 +2435,7 @@
     <string name="accessibility_control_timeout_about_title" msgid="813588002683460837">"کارروائی کرنے کے وقت کے بارے میں (ایکسیسبیلٹی ٹائم آؤٹ)"</string>
     <string name="accessibility_control_timeout_footer_learn_more_content_description" msgid="8118584413220542193">"کارروائی کرنے کے وقت کے بارے میں مزید جانیں (ایکسیسبیلٹی ٹائم آؤٹ)"</string>
     <string name="accessibility_control_timeout_preference_title" msgid="1443940538597464758">"کارروائی کرنے کا وقت"</string>
-    <string name="accessibility_control_timeout_preference_summary" msgid="4037051091059316310">"یہ وقت کی ترجیح سبھی ایپس کے ذریعے تعاون یافتہ نہیں ہے"</string>
+    <string name="accessibility_control_timeout_preference_summary" msgid="4037051091059316310">"وقت کی اس ترجیح کو سبھی ایپس سپورٹ نہیں کرتی ہیں"</string>
     <string name="accessibility_control_timeout_preference_intro_text" msgid="1398116710556762245">"ان عارضی پیغامات کو دکھانے کی مدت منتخب کریں جو آپ سے کارروائی کرنے کا مطالبہ کرتے ہیں"</string>
     <string name="accessibility_long_press_timeout_preference_title" msgid="5237764682976688855">"چھونے اور دبائے رکھنے کا وقفہ"</string>
     <string name="accessibility_display_inversion_preference_title" msgid="5476133104746207952">"رنگوں کی تقلیب"</string>
@@ -2544,7 +2544,7 @@
     <string name="reduce_bright_colors_preference_summary" product="default" msgid="7878756844769221647">"اپنے فون کی کم سے کم چمک سے پَرے اسکرین کو مدھم کریں"</string>
     <string name="reduce_bright_colors_preference_summary" product="tablet" msgid="8959794720356934888">"اپنے ٹیبلیٹ کی کم سے کم چمک سے پَرے اسکرین کو مدھم کریں"</string>
     <string name="reduce_bright_colors_preference_intro_text" msgid="3502290826747650566">"اپنی اسکرین کو زیادہ مدھم کریں تاکہ اس کو پڑھنے میں مزید سہولت ہو"</string>
-    <string name="reduce_bright_colors_preference_subtitle" product="default" msgid="8573408446901659333">"‏اضافی دھندلا کی خصوصیت مندرجہ ذیل صورت میں مددگار ثابت ہو سکتی ہے: ;lt;ol&gt; &lt;li&amp;gt&amp; آپ کے فون کی ڈیفالٹ کم سے کم چمک ابھی بھی بہت روشن ہو;lt;/li&gt; &lt;li&amp;gt&amp; آپ اپنا فون تاریک ماحول میں استعمال کر رہے ہیں جیسے رات میں یا سونے سے پہلے کسی تاریک کمرے میں;lt;/li&gt; &lt;/ol&amp;gt&amp;"</string>
+    <string name="reduce_bright_colors_preference_subtitle" product="default" msgid="8573408446901659333">"‏اضافی دھندلا کی خصوصیت مندرجہ ذیل صورت میں مددگار ثابت ہو سکتی ہے: &lt;ol&gt; &lt;li&gt; آپ کے فون کی ڈیفالٹ کم سے کم چمک ابھی بھی بہت روشن ہو&lt;/li&gt; &lt;li&gt; آپ اپنا فون تاریک ماحول میں استعمال کر رہے ہیں جیسے رات میں یا سونے سے پہلے کسی تاریک کمرے میں&lt;/li&gt; &lt;/ol&gt;"</string>
     <string name="reduce_bright_colors_preference_subtitle" product="tablet" msgid="5158211121482010799">"‏اضافی دھندلا کی خصوصیت مندرجہ ذیل صورت میں مددگار ثابت ہو سکتی ہے: ;lt;ol&gt; &lt;li&amp;gt&amp; آپ کے ٹیبلیٹ کی ڈیفالٹ کم سے کم چمک ابھی بھی بہت روشن ہو;lt;/li&gt; &lt;li&amp;gt&amp; آپ اپنا ٹیبلیٹ تاریک حالات میں استعمال کر رہے ہیں جیسے رات میں یا سونے سے پہلے کسی تاریک کمرے میں;lt;/li&gt; &lt;/ol&amp;gt&amp;"</string>
     <string name="reduce_bright_colors_intensity_preference_title" msgid="7455443033955118267">"شدت"</string>
     <string name="reduce_bright_colors_intensity_start_label" msgid="930387498396426039">"زيادہ مدھم"</string>
@@ -3985,7 +3985,7 @@
     <string name="important_bubble" msgid="7911698275408390846">"بلبلہ ترجیحی گفتگوئیں"</string>
     <string name="important_conversation_behavior_summary" msgid="1845064084071107732">"ترجیحی گفتگوئیں پُل ڈاؤن شیڈ کے اوپری حصے میں دکھائی دیتی ہیں۔ آپ انہیں بلبلہ اور \'ڈسٹرب نہ کریں\' مداخلت پر بھی سیٹ کر سکتے ہیں۔"</string>
     <string name="conversation_onboarding_title" msgid="5194559958353468484">"ترجیحی اور ترمیم شدہ گفتگوئیں یہاں ظاہر ہوں گی"</string>
-    <string name="conversation_onboarding_summary" msgid="2484845363368486941">"ایک بار جب آپ گفتگو کو بطور ترجیحی نشان زد کرتے ہیں یا گفتگوئیں میں کوئی دوسری تبدیلی کرتے ہیں، تو وہ یہاں ظاہر ہوں گے۔ \n\n گفتگو کی ترتیبات کو تبدیل کرنے کے ليے: \nپُل ڈاؤن شیڈ کھولنے کے ليے اسکرین کے اوپری حصے سے نیچے کی طرف سوائپ کریں پھر گفتگو کو ٹچ کریں اور دبائے رکھیں۔"</string>
+    <string name="conversation_onboarding_summary" msgid="2484845363368486941">"ایک بار جب آپ کسی گفتگو کو بطور ترجیحی نشان زد کرتے ہیں یا گفتگوؤں میں کوئی دوسری تبدیلی کرتے ہیں تو وہ یہاں ظاہر ہوں گی۔ \n\n گفتگو کی ترتیبات کو تبدیل کرنے کے ليے: \nپُل ڈاؤن شیڈ کھولنے کے ليے اسکرین کے اوپری حصے سے نیچے کی طرف سوائپ کریں پھر گفتگو کو ٹچ کریں اور دبائے رکھیں۔"</string>
     <string name="notification_importance_min" msgid="4609688642942787774">"بغیر آواز کے دکھائیں اور چھوٹا کریں"</string>
     <string name="notification_importance_low" msgid="7562535765919565273">"خاموشی سے دکھائیں"</string>
     <string name="notification_importance_default" msgid="7483906490369073043">"آواز نکالیں"</string>
@@ -4247,7 +4247,7 @@
     <string name="zen_mode_events_list" msgid="7191316245742097229">"ایونٹس"</string>
     <string name="zen_mode_events_list_first" msgid="7425369082835214361">"ایونٹس"</string>
     <string name="zen_mode_bypassing_apps" msgid="625309443389126481">"ایپس کو اوور رائیڈ کرنے کی اجازت دیں"</string>
-    <string name="zen_mode_bypassing_apps_header" msgid="60083006963906906">"ایپس جو رکاوٹ ڈال سکتی ہیں"</string>
+    <string name="zen_mode_bypassing_apps_header" msgid="60083006963906906">"ایپس جو مداخلت کر سکتی ہیں"</string>
     <string name="zen_mode_bypassing_apps_add_header" msgid="3201829605075172536">"مزید ایپس منتخب کریں"</string>
     <string name="zen_mode_bypassing_apps_none" msgid="7944221631721778096">"کوئی ایپ منتخب نہیں ہے"</string>
     <string name="zen_mode_bypassing_apps_subtext_none" msgid="5128770411598722200">"کوئی ایپ رکاوٹ نہیں ڈال سکتی"</string>
@@ -4896,7 +4896,7 @@
     <string name="dark_theme_slice_subtitle" msgid="5555724345330434268">"بیٹری لائف بڑھانے میں مدد کرتی ہے"</string>
     <string name="quick_settings_developer_tiles" msgid="7336007844525766623">"فوری ترتیبات کے ڈویلپر ٹائلز"</string>
     <string name="adb_authorization_timeout_title" msgid="6996844506783749754">"‏adb اجازت دہندگی کے ٹائم آؤٹ کو غیر فعال کریں"</string>
-    <string name="adb_authorization_timeout_summary" msgid="409931540424019778">"‏ان سسٹمز کے لیے adb کی اجازت دہندگیوں کی منسوخی کو خود کار طور پر غیر فعال کریں جو ڈیفالٹ (7 دن) یا صارف کے ترتیب کردہ (کم از کم1 دن) وقت کی تعداد کے اندر دوبارہ منسلک نہیں ہوئی۔"</string>
+    <string name="adb_authorization_timeout_summary" msgid="409931540424019778">"‏ان سسٹمز کے لیے adb کی اجازت دہندگیوں کی منسوخی کو خود کار طور پر غیر فعال کریں جو ڈیفالٹ (7 دن) یا صارف کے ترتیب کردہ (کم از کم 1 دن) وقت کی تعداد کے اندر دوبارہ منسلک نہیں ہوئی۔"</string>
     <string name="winscope_trace_quick_settings_title" msgid="4104768565053226689">"‏Winscope ٹریس"</string>
     <string name="sensors_off_quick_settings_title" msgid="8472151847125917167">"سینسرز آف ہیں"</string>
     <string name="managed_profile_settings_title" msgid="3400923723423564217">"دفتری پروفائل کی ترتیبات"</string>
@@ -5788,4 +5788,20 @@
     <string name="ingress_rate_limit_summary" msgid="1097811019742438371">"نیٹ ورک بینڈ وڈتھ انگریس کی شرح کی حد کو کنفیگر کریں جو انٹرنیٹ کنیکٹویٹی فراہم کرنے والے تمام نیٹ ورکس پر لاگو ہوتی ہے۔"</string>
     <string name="ingress_rate_limit_dialog_title" msgid="5359461052422633789">"نیٹ ورک ڈاؤن لوڈ کرنے کی شرح کی حد کو کنفیگر کریں"</string>
     <string name="ingress_rate_limit_no_limit_entry" msgid="8741098826008012163">"کوئی حد نہیں"</string>
+    <!-- no translation found for bluetooth_broadcast_dialog_title (9172775308463135884) -->
+    <skip />
+    <!-- no translation found for bluetooth_broadcast_dialog_find_message (6621660851669953883) -->
+    <skip />
+    <!-- no translation found for bluetooth_broadcast_dialog_broadcast_message (6198264676009094495) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_title (5385985218699831970) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_summary (3907899428626210673) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast (1768337775649457586) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_button_leave (7881206581147104908) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_button_scan (3995664694641895189) -->
+    <skip />
 </resources>
