--- a/res/values-gu/strings.xml
+++ b/res/values-gu/strings.xml
@@ -5633,7 +5633,7 @@
     <string name="carrier_wifi_network_title" msgid="5461382943873831770">"W+ નેટવર્ક"</string>
     <string name="sim_category_title" msgid="2341314000964710495">"સિમ"</string>
     <string name="downloaded_sim_category_title" msgid="8611467223348446658">"ડાઉનલોડ કરેલું સિમ"</string>
-    <string name="downloaded_sims_category_title" msgid="8779223441781763315">"ડાઉનલોડ કરેલા SIMS"</string>
+    <string name="downloaded_sims_category_title" msgid="8779223441781763315">"ડાઉનલોડ કરેલા સિમ"</string>
     <string name="sim_category_active_sim" msgid="1503823567818544012">"સક્રિય"</string>
     <string name="sim_category_inactive_sim" msgid="4068899490133820881">"નિષ્ક્રિય"</string>
     <string name="sim_category_default_active_sim" msgid="1208194173387987231">" / <xliff:g id="ID_1">%1$s</xliff:g> માટે ડિફૉલ્ટ"</string>
@@ -5788,4 +5788,20 @@
     <string name="ingress_rate_limit_summary" msgid="1097811019742438371">"ઇન્ટરનેટ કનેક્ટિવિટી પ્રદાન કરતા બધા નેટવર્ક પર લાગુ થતી નેટવર્ક બૅન્ડવિડ્થના પ્રવેશવાના દરની મર્યાદા ગોઠવો."</string>
     <string name="ingress_rate_limit_dialog_title" msgid="5359461052422633789">"નેટવર્કના ડાઉનલોડ કરવાના દરની મર્યાદા ગોઠવો"</string>
     <string name="ingress_rate_limit_no_limit_entry" msgid="8741098826008012163">"કોઈ મર્યાદા નથી"</string>
+    <!-- no translation found for bluetooth_broadcast_dialog_title (9172775308463135884) -->
+    <skip />
+    <!-- no translation found for bluetooth_broadcast_dialog_find_message (6621660851669953883) -->
+    <skip />
+    <!-- no translation found for bluetooth_broadcast_dialog_broadcast_message (6198264676009094495) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_title (5385985218699831970) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_summary (3907899428626210673) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast (1768337775649457586) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_button_leave (7881206581147104908) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_button_scan (3995664694641895189) -->
+    <skip />
 </resources>
