--- a/res/values-th/strings.xml
+++ b/res/values-th/strings.xml
@@ -29,7 +29,7 @@
     </plurals>
     <string name="show_dev_on" msgid="2840850085134853754">"ตอนนี้คุณเป็นนักพัฒนาซอฟต์แวร์แล้ว!"</string>
     <string name="show_dev_already" msgid="7041756429707644630">"ไม่จำเป็น คุณเป็นนักพัฒนาซอฟต์แวร์อยู่แล้ว"</string>
-    <string name="dev_settings_disabled_warning" msgid="6971867026249671244">"โปรดเปิดใช้ตัวเลือกสำหรับนักพัฒนาซอฟต์แวร์ก่อน"</string>
+    <string name="dev_settings_disabled_warning" msgid="6971867026249671244">"โปรดเปิดใช้ตัวเลือกสำหรับนักพัฒนาแอปก่อน"</string>
     <string name="header_category_wireless_networks" msgid="303445626075235229">"ระบบไร้สายและเครือข่าย"</string>
     <string name="header_category_system" msgid="1665516346845259058">"ระบบ"</string>
     <string name="radioInfo_service_in" msgid="9088637745836646271">"กำลังให้บริการ"</string>
@@ -2327,7 +2327,7 @@
     <string name="accessibility_magnification_switch_shortcut_positive_button" msgid="2446942190957296957">"เปลี่ยนไปใช้ปุ่มการช่วยเหลือพิเศษ"</string>
     <string name="accessibility_magnification_switch_shortcut_negative_button" msgid="7115794462123071594">"ใช้การแตะ 3 ครั้ง"</string>
     <string name="accessibility_magnification_triple_tap_warning_title" msgid="8484669851397296597">"การดำเนินการนี้อาจทำให้แป้นพิมพ์ทำงานช้าลง"</string>
-    <string name="accessibility_magnification_triple_tap_warning_message" msgid="2008671502848936410">"เมื่อใช้การแตะ 3 ครั้งเพื่อขยายหน้าจอบางส่วน คุณอาจพบปัญหาเกี่ยวกับแป้นพิมพ์\n\nคุณหลีกเลี่ยงปัญหานี้ได้ด้วยการเปลี่ยนแป้นพิมพ์ลัดการขยายหน้าจอไปใช้ตัวเลือกอื่นที่ไม่ใช่การแตะ 3 ครั้ง\n"<annotation id="link">"เปลี่ยนการตั้งค่า"</annotation></string>
+    <string name="accessibility_magnification_triple_tap_warning_message" msgid="2008671502848936410">"เมื่อใช้การแตะ 3 ครั้งเพื่อขยายหน้าจอบางส่วน คุณอาจพบปัญหาเกี่ยวกับแป้นพิมพ์\n\nคุณหลีกเลี่ยงปัญหานี้ได้ด้วยการเปลี่ยนทางลัดการขยายไปใช้ตัวเลือกอื่นที่ไม่ใช่การแตะ 3 ครั้ง\n"<annotation id="link">"เปลี่ยนการตั้งค่า"</annotation></string>
     <string name="accessibility_magnification_triple_tap_warning_positive_button" msgid="8712304035901450010">"ดำเนินการต่อ"</string>
     <string name="accessibility_magnification_triple_tap_warning_negative_button" msgid="2028849736366584733">"ยกเลิก"</string>
     <string name="accessibility_magnification_service_settings_title" msgid="3531350704632316017">"การตั้งค่าการขยาย"</string>
@@ -2344,8 +2344,8 @@
     <string name="accessibility_text_reading_confirm_dialog_title" msgid="2865331351355690389">"รีเซ็ตขนาดการแสดงผลและข้อความหรือไม่"</string>
     <string name="accessibility_text_reading_confirm_dialog_message" msgid="517090197003540264">"ค่ากำหนดของขนาดการแสดงผลและข้อความของคุณจะเปลี่ยนกลับไปเป็นการตั้งค่าเดิมของโทรศัพท์"</string>
     <string name="accessibility_text_reading_confirm_dialog_reset_button" msgid="8215800137850243736">"รีเซ็ต"</string>
-    <string name="accessibility_text_reading_conversation_message_1" msgid="7883952203831957831">"มีแผนจะทำอะไรไหมในวันหยุดสุดสัปดาห์"</string>
-    <string name="accessibility_text_reading_conversation_message_2" msgid="8112160435318635856">"กำลังจะไปทะเล อยากไปด้วยไหม"</string>
+    <string name="accessibility_text_reading_conversation_message_1" msgid="7883952203831957831">"เสาร์อาทิตย์นี้มีแผนจะทำอะไรมั้ย"</string>
+    <string name="accessibility_text_reading_conversation_message_2" msgid="8112160435318635856">"ไปทะเล อยากไปด้วยมั้ย"</string>
     <string name="accessibility_screen_option" msgid="8465307075278878145">"ตัวเลือก"</string>
     <string name="accessibility_preference_magnification_summary" msgid="2875518904115896888">"ซูมเข้าบนหน้าจอ"</string>
     <string name="accessibility_screen_magnification_short_summary" msgid="2207048420669939150">"แตะ 3 ครั้งเพื่อซูม"</string>
@@ -2417,8 +2417,8 @@
     <string name="accessibility_toggle_screen_magnification_auto_update_preference_title" msgid="4987009529235165664">"อัปเดตการขยายหน้าจอโดยอัตโนมัติ"</string>
     <string name="accessibility_toggle_screen_magnification_auto_update_preference_summary" msgid="9034532513972547720">"อัปเดตการขยายหน้าจอเมื่อเปลี่ยนแอปพลิเคชัน"</string>
     <string name="accessibility_power_button_ends_call_prerefence_title" msgid="8187306131979612144">"กดปุ่มเปิด/ปิดเพื่อวางสาย"</string>
-    <string name="accessibility_toggle_large_pointer_icon_title" msgid="5508351959249876801">"ตัวชี้เมาส์ขนาดใหญ่"</string>
-    <string name="accessibility_toggle_large_pointer_icon_summary" msgid="1480527946039237705">"ทำให้ตัวชี้เมาส์มองเห็นได้ชัดเจนยิ่งขึ้น"</string>
+    <string name="accessibility_toggle_large_pointer_icon_title" msgid="5508351959249876801">"เคอร์เซอร์เมาส์ขนาดใหญ่"</string>
+    <string name="accessibility_toggle_large_pointer_icon_summary" msgid="1480527946039237705">"ทำให้เคอร์เซอร์เมาส์มองเห็นได้ชัดเจนยิ่งขึ้น"</string>
     <string name="accessibility_disable_animations" msgid="2993529829457179058">"นำภาพเคลื่อนไหวออก"</string>
     <string name="accessibility_disable_animations_summary" msgid="5828228669556554565">"ลดการเคลื่อนไหวบนหน้าจอ"</string>
     <string name="accessibility_toggle_primary_mono_title" msgid="7587152099472946571">"เสียงแบบโมโน"</string>
@@ -2435,7 +2435,7 @@
     <string name="accessibility_control_timeout_about_title" msgid="813588002683460837">"เกี่ยวกับเวลาดำเนินการ (ระยะหมดเวลาช่วยเหลือพิเศษ)"</string>
     <string name="accessibility_control_timeout_footer_learn_more_content_description" msgid="8118584413220542193">"ดูข้อมูลเพิ่มเติมเกี่ยวกับเวลาดำเนินการ (ระยะหมดเวลาช่วยเหลือพิเศษ)"</string>
     <string name="accessibility_control_timeout_preference_title" msgid="1443940538597464758">"เวลาในการดำเนินการ"</string>
-    <string name="accessibility_control_timeout_preference_summary" msgid="4037051091059316310">"แอปทั้งหมดไม่รองรับค่ากำหนดระยะเวลานี้"</string>
+    <string name="accessibility_control_timeout_preference_summary" msgid="4037051091059316310">"แอปบางแอปไม่รองรับค่ากำหนดระยะเวลานี้"</string>
     <string name="accessibility_control_timeout_preference_intro_text" msgid="1398116710556762245">"เลือกระยะเวลาแสดงข้อความชั่วคราวที่ขอให้คุณดำเนินการ"</string>
     <string name="accessibility_long_press_timeout_preference_title" msgid="5237764682976688855">"การหน่วงเวลาด้วยการแตะค้างไว้"</string>
     <string name="accessibility_display_inversion_preference_title" msgid="5476133104746207952">"การกลับสี"</string>
@@ -2605,14 +2605,14 @@
     <string name="accessibility_service_warning" msgid="6779187188736432618">"<xliff:g id="SERVICE">%1$s</xliff:g> กำลังขอควบคุมอุปกรณ์นี้โดยสมบูรณ์ บริการนี้จะอ่านหน้าจอและดำเนินการในนามของผู้ใช้ที่ต้องการการช่วยเหลือพิเศษได้ การควบคุมระดับนี้ไม่เหมาะสำหรับแอปส่วนใหญ่"</string>
     <string name="accessibility_service_warning_description" msgid="6573203795976134751">"การควบคุมอย่างเต็มที่เหมาะสำหรับแอปที่ช่วยคุณในเรื่องความต้องการความช่วยเหลือพิเศษแต่ไม่เหมาะสำหรับแอปส่วนใหญ่"</string>
     <string name="accessibility_service_screen_control_title" msgid="324795030658109870">"ดูและควบคุมหน้าจอ"</string>
-    <string name="accessibility_service_screen_control_description" msgid="8431940515157990426">"การควบคุมนี้อ่านเนื้อหาทั้งหมดบนหน้าจอและแสดงเนื้อหาทับแอปอื่นๆ"</string>
+    <string name="accessibility_service_screen_control_description" msgid="8431940515157990426">"การควบคุมนี้สามารถอ่านเนื้อหาทั้งหมดบนหน้าจอและแสดงเนื้อหาทับแอปอื่นๆ"</string>
     <string name="accessibility_service_action_perform_title" msgid="1449360056585337833">"ดูและดำเนินการ"</string>
-    <string name="accessibility_service_action_perform_description" msgid="7807832069800034738">"การกระทำนี้ติดตามการโต้ตอบของคุณกับแอปหรือกับเซ็นเซอร์ของฮาร์ดแวร์ และจะโต้ตอบกับแอปต่างๆ แทนคุณ"</string>
+    <string name="accessibility_service_action_perform_description" msgid="7807832069800034738">"การควบคุมนี้สามารถติดตามการโต้ตอบของคุณกับแอปหรือกับเซ็นเซอร์ของฮาร์ดแวร์ และโต้ตอบกับแอปต่างๆ แทนคุณ"</string>
     <string name="accessibility_dialog_button_allow" msgid="8274918676473216697">"อนุญาต"</string>
     <string name="accessibility_dialog_button_deny" msgid="2037249860078259284">"ปฏิเสธ"</string>
     <string name="accessibility_dialog_button_stop" msgid="7295448112784528196">"หยุด"</string>
     <string name="accessibility_dialog_button_cancel" msgid="4813234247237851121">"ยกเลิก"</string>
-    <string name="disable_service_title" msgid="2909108731776956167">"หยุด<xliff:g id="SERVICE">%1$s</xliff:g>ไหม"</string>
+    <string name="disable_service_title" msgid="2909108731776956167">"หยุด \"<xliff:g id="SERVICE">%1$s</xliff:g>\" ไหม"</string>
     <string name="disable_service_message" msgid="4814173941688548016">"การแตะ<xliff:g id="STOP">%1$s</xliff:g>จะหยุด <xliff:g id="SERVICE">%2$s</xliff:g>"</string>
     <string name="accessibility_no_services_installed" msgid="3725569493860028593">"ไม่ได้ติดตั้งบริการใดไว้"</string>
     <string name="accessibility_no_service_selected" msgid="1310596127128379897">"ไม่ได้เลือกบริการ"</string>
@@ -4782,8 +4782,8 @@
     <string name="configure" msgid="1499586749829665889">"กำหนดค่า"</string>
     <string name="data_usage_other_apps" msgid="5649047093607329537">"แอปอื่นๆ ที่รวมอยู่ในการใช้งาน"</string>
     <plurals name="data_saver_unrestricted_summary" formatted="false" msgid="3316296488378947221">
-      <item quantity="other"><xliff:g id="COUNT">%1$d</xliff:g> แอปได้รับอนุญาตให้ใช้อินเทอร์เน็ตได้ไม่จำกัดเมื่อเปิดโปรแกรมประหยัดอินเทอร์เน็ต</item>
-      <item quantity="one">1 แอปได้รับอนุญาตให้ใช้อินเทอร์เน็ตได้ไม่จำกัดเมื่อเปิดโปรแกรมประหยัดอินเทอร์เน็ต</item>
+      <item quantity="other"><xliff:g id="COUNT">%1$d</xliff:g> แอปได้รับอนุญาตให้ใช้อินเทอร์เน็ตได้ไม่จำกัดเมื่อเปิดการประหยัดอินเทอร์เน็ต</item>
+      <item quantity="one">1 แอปได้รับอนุญาตให้ใช้อินเทอร์เน็ตได้ไม่จำกัดเมื่อเปิดการประหยัดอินเทอร์เน็ต</item>
     </plurals>
     <string name="data_usage_title" msgid="4039024073687469094">"ข้อมูลหลัก"</string>
     <string name="data_usage_wifi_title" msgid="1060495519280456926">"อินเทอร์เน็ตจาก Wi‑Fi"</string>
@@ -4810,9 +4810,9 @@
     <string name="restrict_background_blocklisted" msgid="2308345280442438232">"ปิดใช้อินเทอร์เน็ตที่ใช้งานอยู่เบื้องหลัง"</string>
     <string name="data_saver_on" msgid="7848893946018448793">"เปิด"</string>
     <string name="data_saver_off" msgid="5891210864117269045">"ปิด"</string>
-    <string name="data_saver_switch_title" msgid="7111538580123722959">"ใช้โปรแกรมประหยัดอินเทอร์เน็ต"</string>
+    <string name="data_saver_switch_title" msgid="7111538580123722959">"ใช้การประหยัดอินเทอร์เน็ต"</string>
     <string name="unrestricted_app_title" msgid="7117585996574329284">"ใช้อินเทอร์เน็ตได้ไม่จำกัด"</string>
-    <string name="unrestricted_app_summary" msgid="282698963532000403">"อนุญาตให้เข้าถึงข้อมูลได้ไม่จำกัดเมื่อเปิดโปรแกรมประหยัดอินเทอร์เน็ต"</string>
+    <string name="unrestricted_app_summary" msgid="282698963532000403">"อนุญาตให้เข้าถึงข้อมูลได้ไม่จำกัดเมื่อเปิดการประหยัดอินเทอร์เน็ต"</string>
     <string name="home_app" msgid="6056850504746902747">"แอปหน้าแรก"</string>
     <string name="no_default_home" msgid="3588073707316139318">"ไม่มีหน้าแรกเริ่มต้น"</string>
     <string name="lockpattern_settings_require_cred_before_startup" msgid="4098653943835666086">"รักษาความปลอดภัยเมื่อเปิดขึ้น"</string>
@@ -4894,7 +4894,7 @@
     <string name="dark_ui_settings_dialog_acknowledge" msgid="250437497729953965">"ได้เลย"</string>
     <string name="dark_theme_slice_title" msgid="4684222119481114062">"ลองใช้ธีมมืด"</string>
     <string name="dark_theme_slice_subtitle" msgid="5555724345330434268">"ช่วยยืดอายุการใช้งานแบตเตอรี่"</string>
-    <string name="quick_settings_developer_tiles" msgid="7336007844525766623">"ชิ้นส่วนการตั้งค่าด่วนสำหรับนักพัฒนาซอฟต์แวร์"</string>
+    <string name="quick_settings_developer_tiles" msgid="7336007844525766623">"องค์ประกอบการตั้งค่าด่วนสำหรับนักพัฒนาแอป"</string>
     <string name="adb_authorization_timeout_title" msgid="6996844506783749754">"ปิดใช้ระยะหมดเวลาการให้สิทธิ์ adb"</string>
     <string name="adb_authorization_timeout_summary" msgid="409931540424019778">"ปิดใช้การเพิกถอนการให้สิทธิ์ adb โดยอัตโนมัติสำหรับระบบที่ไม่ได้เชื่อมต่อใหม่ภายในระยะเวลาที่เป็นค่าเริ่มต้น (7 วัน) หรือระยะเวลาที่ผู้ใช้กำหนดค่าไว้ (ขั้นต่ำ 1 วัน)"</string>
     <string name="winscope_trace_quick_settings_title" msgid="4104768565053226689">"Winscope Trace"</string>
@@ -5095,7 +5095,7 @@
     <string name="financed_privacy_safe_mode" msgid="5362149445732602578">"รีบูตอุปกรณ์ให้อยู่ในโหมดปลอดภัย"</string>
     <string name="financed_privacy_multi_users" msgid="1727194928477613081">"เพิ่มผู้ใช้มากกว่า 1 คนในอุปกรณ์"</string>
     <string name="financed_privacy_config_date_time" msgid="8567370445374984365">"เปลี่ยนวันที่ เวลา และเขตเวลา"</string>
-    <string name="financed_privacy_developer_options" msgid="7602001474669831672">"ใช้ตัวเลือกสำหรับนักพัฒนาซอฟต์แวร์"</string>
+    <string name="financed_privacy_developer_options" msgid="7602001474669831672">"ใช้ตัวเลือกสำหรับนักพัฒนาแอป"</string>
     <string name="financed_privacy_credit_provider_capabilities_category" msgid="8737902277892987998">"ผู้ให้บริการเครดิตสามารถดำเนินการดังนี้"</string>
     <string name="financed_privacy_IMEI" msgid="1852413860963824799">"ดูหมายเลข IMEI"</string>
     <string name="financed_privacy_factory_reset" msgid="5505016667590160732">"รีเซ็ตอุปกรณ์เป็นค่าเริ่มต้นหากมีบางอย่างผิดปกติ"</string>
@@ -5672,7 +5672,7 @@
     <string name="prevent_ringing_main_switch_title" msgid="4726252811262086643">"ใช้ป้องกันการส่งเสียง"</string>
     <string name="use_wifi_hotsopt_main_switch_title" msgid="3909731167290690539">"ใช้ฮอตสปอต Wi-Fi"</string>
     <string name="app_pinning_main_switch_title" msgid="5465506660064032876">"ใช้การปักหมุดแอป"</string>
-    <string name="developer_options_main_switch_title" msgid="1720074589554152501">"ใช้ตัวเลือกสำหรับนักพัฒนาซอฟต์แวร์"</string>
+    <string name="developer_options_main_switch_title" msgid="1720074589554152501">"ใช้ตัวเลือกสำหรับนักพัฒนาแอป"</string>
     <string name="default_print_service_main_switch_title" msgid="4697133737128324036">"ใช้บริการพิมพ์"</string>
     <string name="multiple_users_main_switch_title" msgid="6686858308083037810">"อนุญาตให้มีผู้ใช้หลายคน"</string>
     <string name="wireless_debugging_main_switch_title" msgid="8463499572781441719">"ใช้การแก้ไขข้อบกพร่องผ่าน Wi-Fi"</string>
@@ -5788,4 +5788,20 @@
     <string name="ingress_rate_limit_summary" msgid="1097811019742438371">"กำหนดค่าขีดจำกัดอัตราแบนด์วิดท์สำหรับการดาวน์โหลดขั้นต่ำและสูงสุดของเครือข่ายซึ่งใช้กับเครือข่ายทั้งหมดที่ให้การเชื่อมต่ออินเทอร์เน็ต"</string>
     <string name="ingress_rate_limit_dialog_title" msgid="5359461052422633789">"กำหนดค่าขีดจำกัดอัตราการดาวน์โหลดของเครือข่าย"</string>
     <string name="ingress_rate_limit_no_limit_entry" msgid="8741098826008012163">"ไม่จำกัด"</string>
+    <!-- no translation found for bluetooth_broadcast_dialog_title (9172775308463135884) -->
+    <skip />
+    <!-- no translation found for bluetooth_broadcast_dialog_find_message (6621660851669953883) -->
+    <skip />
+    <!-- no translation found for bluetooth_broadcast_dialog_broadcast_message (6198264676009094495) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_title (5385985218699831970) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_summary (3907899428626210673) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast (1768337775649457586) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_button_leave (7881206581147104908) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_button_scan (3995664694641895189) -->
+    <skip />
 </resources>
